--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.url=jdbc:h2:mem:restaurant
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:restaurant
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+spring.main.allow-bean-definition-overriding=true
