added junit test case for controller, service and other classes for code coverage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.datasource.url=jdbc:h2:mem:restaurant
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-
 spring.main.allow-bean-definition-overriding=true
+
+spring.data.mongodb.url=mongodb://localhost:27017
+spring.data.mongodb.database=Reservation_app
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
